refact group key
