# cmd/open_im_api/docs/swagger.yaml
@@ -20,19 +20,7 @@ definitions:
         type: integer
       introduction:
         type: string
-      url:
-        type: string
-      videoElem:
-        $ref: '#/definitions/Open_IM_internal_api_manage.VideoElem'
-    required:
-    - notificationFaceURL
-    - notificationName
-    - notificationType
-    - text
-    type: object
-  Open_IM_internal_api_manage.PictureBaseInfo:
-    properties:
-      height:
+      lookMemberInfo:
         type: integer
       memberCount:
         type: integer
@@ -66,10 +54,20 @@ definitions:
     type: object
   Open_IM_pkg_proto_sdk_ws.UserInfo:
     properties:
+      LastLoginIp:
+        type: string
+      LastLoginTime:
+        type: integer
+      LoginLimit:
+        type: integer
+      LoginTimes:
+        type: integer
       appMangerLevel:
         type: integer
       birth:
         type: integer
+      createIp:
+        type: string
       createTime:
         type: integer
       email:
@@ -82,6 +80,8 @@ definitions:
         type: integer
       globalRecvMsgOpt:
         type: integer
+      invitationCode:
+        type: string
       nickname:
         type: string
       phoneNumber:
@@ -341,6 +341,8 @@ definitions:
         - 2
         type: integer
       unreadCount:
+        type: integer
+      updateUnreadCountTime:
         type: integer
       userID:
         type: string
@@ -706,7 +708,7 @@ definitions:
       operationID:
         type: string
       platform:
-        maximum: 8
+        maximum: 9
         minimum: 1
         type: integer
     required:
@@ -887,9 +889,7 @@ definitions:
       operationID:
         type: string
     required:
-    - count
     - groupID
-    - offset
     - operationID
     type: object
   base_info.GetGroupAllMemberResp:
@@ -992,6 +992,21 @@ definitions:
         type: integer
       errMsg:
         type: string
+    type: object
+  base_info.GetNoEncryptGroupKeyListReq:
+    properties:
+      adminName:
+        type: string
+      groupID:
+        type: string
+      limit:
+        type: integer
+      operationID:
+        type: string
+      secret:
+        type: string
+      start:
+        type: integer
     type: object
   base_info.GetSelfApplyListReq:
     properties:
@@ -1442,6 +1457,8 @@ definitions:
       groupID:
         type: string
       isOnlineOnly:
+        type: boolean
+      isSendAll:
         type: boolean
       notOfflinePush:
         type: boolean
@@ -1897,7 +1914,15 @@ definitions:
     type: object
   base_info.UpdateSelfUserInfoReq:
     properties:
+      LastLoginIp:
+        maxLength: 15
+        type: string
       birth:
+        type: integer
+      createIp:
+        maxLength: 15
+        type: string
+      createTime:
         type: integer
       email:
         maxLength: 64
@@ -1913,6 +1938,14 @@ definitions:
         - 0
         - 1
         - 2
+        type: integer
+      invitationCode:
+        type: string
+      lastLoginTime:
+        type: integer
+      loginLimit:
+        type: integer
+      loginTimes:
         type: integer
       nickname:
         maxLength: 64
@@ -1978,7 +2011,15 @@ definitions:
     type: object
   base_info.UserRegisterReq:
     properties:
+      LastLoginIp:
+        maxLength: 15
+        type: string
       birth:
+        type: integer
+      createIp:
+        maxLength: 15
+        type: string
+      createTime:
         type: integer
       email:
         maxLength: 64
@@ -1994,6 +2035,14 @@ definitions:
         - 0
         - 1
         - 2
+        type: integer
+      invitationCode:
+        type: string
+      lastLoginTime:
+        type: integer
+      loginLimit:
+        type: integer
+      loginTimes:
         type: integer
       nickname:
         maxLength: 64
@@ -2044,10 +2093,12 @@ definitions:
     type: object
   base_info.UserTokenReq:
     properties:
+      loginIp:
+        type: string
       operationID:
         type: string
       platform:
-        maximum: 8
+        maximum: 9
         minimum: 1
         type: integer
       secret:
@@ -2110,6 +2161,97 @@ definitions:
       userID:
         type: string
       userName:
+        type: string
+    type: object
+  cmd_Open-IM-SDK-Core_pkg_server_api_params.GroupInfo:
+    properties:
+      applyMemberFriend:
+        type: integer
+      createTime:
+        type: integer
+      creatorUserID:
+        type: string
+      ex:
+        type: string
+      faceURL:
+        type: string
+      groupID:
+        type: string
+      groupName:
+        type: string
+      groupType:
+        type: integer
+      introduction:
+        type: string
+      lookMemberInfo:
+        type: integer
+      memberCount:
+        type: integer
+      needVerification:
+        type: integer
+      notification:
+        type: string
+      notificationUpdateTime:
+        type: integer
+      notificationUserID:
+        type: string
+      ownerUserID:
+        type: string
+      status:
+        type: integer
+    type: object
+  cmd_Open-IM-SDK-Core_pkg_server_api_params.PublicUserInfo:
+    properties:
+      ex:
+        type: string
+      faceURL:
+        type: string
+      gender:
+        type: integer
+      nickname:
+        type: string
+      pubKey:
+        type: string
+      userID:
+        type: string
+    type: object
+  cmd_Open-IM-SDK-Core_pkg_server_api_params.UserInfo:
+    properties:
+      LastLoginIp:
+        type: string
+      LastLoginTime:
+        type: integer
+      LoginLimit:
+        type: integer
+      LoginTimes:
+        type: integer
+      appMangerLevel:
+        type: integer
+      birth:
+        type: integer
+      createIp:
+        type: string
+      createTime:
+        type: integer
+      email:
+        type: string
+      ex:
+        type: string
+      faceURL:
+        type: string
+      gender:
+        type: integer
+      globalRecvMsgOpt:
+        type: integer
+      invitationCode:
+        type: string
+      nickname:
+        type: string
+      phoneNumber:
+        type: string
+      pubKey:
+        type: string
+      userID:
         type: string
     type: object
   manage.FileElem:
@@ -2351,85 +2493,6 @@ definitions:
       userID:
         type: string
     type: object
-  pkg_proto_sdk_ws.GroupInfo:
-    properties:
-      applyMemberFriend:
-        type: integer
-      createTime:
-        type: integer
-      creatorUserID:
-        type: string
-      ex:
-        type: string
-      faceURL:
-        type: string
-      groupID:
-        type: string
-      groupName:
-        type: string
-      groupType:
-        type: integer
-      introduction:
-        type: string
-      lookMemberInfo:
-        type: integer
-      memberCount:
-        type: integer
-      needVerification:
-        type: integer
-      notification:
-        type: string
-      notificationUpdateTime:
-        type: integer
-      notificationUserID:
-        type: string
-      ownerUserID:
-        type: string
-      status:
-        type: integer
-    type: object
-  pkg_proto_sdk_ws.PublicUserInfo:
-    properties:
-      ex:
-        type: string
-      faceURL:
-        type: string
-      gender:
-        type: integer
-      nickname:
-        type: string
-      pubKey:
-        type: string
-      userID:
-        type: string
-    type: object
-  pkg_proto_sdk_ws.UserInfo:
-    properties:
-      appMangerLevel:
-        type: integer
-      birth:
-        type: integer
-      createTime:
-        type: integer
-      email:
-        type: string
-      ex:
-        type: string
-      faceURL:
-        type: string
-      gender:
-        type: integer
-      globalRecvMsgOpt:
-        type: integer
-      nickname:
-        type: string
-      phoneNumber:
-        type: string
-      pubKey:
-        type: string
-      userID:
-        type: string
-    type: object
   server_api_params.Department:
     properties:
       createTime:
@@ -2479,7 +2542,7 @@ definitions:
       ex:
         type: string
       friendUser:
-        $ref: '#/definitions/pkg_proto_sdk_ws.UserInfo'
+        $ref: '#/definitions/cmd_Open-IM-SDK-Core_pkg_server_api_params.UserInfo'
       operatorUserID:
         type: string
       ownerUserID:
@@ -2522,30 +2585,14 @@ definitions:
     type: object
   server_api_params.GroupKey:
     properties:
-      applyMemberFriend:
-        type: integer
       createTime:
         type: integer
       ex:
         type: string
       groupID:
         type: string
-      groupName:
+      key:
         type: string
-      groupType:
-        type: integer
-      introduction:
-        type: string
-      memberCount:
-        type: integer
-      needVerification:
-        type: integer
-      notification:
-        type: string
-      ownerUserID:
-        type: string
-      status:
-        type: integer
     type: object
   server_api_params.GroupMemberFullInfo:
     properties:
@@ -2580,7 +2627,7 @@ definitions:
       ex:
         type: string
       groupInfo:
-        $ref: '#/definitions/pkg_proto_sdk_ws.GroupInfo'
+        $ref: '#/definitions/cmd_Open-IM-SDK-Core_pkg_server_api_params.GroupInfo'
       handleMsg:
         type: string
       handleResult:
@@ -2598,7 +2645,7 @@ definitions:
       reqTime:
         type: integer
       userInfo:
-        $ref: '#/definitions/pkg_proto_sdk_ws.PublicUserInfo'
+        $ref: '#/definitions/cmd_Open-IM-SDK-Core_pkg_server_api_params.PublicUserInfo'
     type: object
   server_api_params.OfflinePushInfo:
     properties:
@@ -3637,6 +3684,44 @@ paths:
           schema:
             $ref: '#/definitions/base_info.Swagger500Resp'
       summary: 获取用户加入群列表
+      tags:
+      - 群组相关
+  /group/get_no_encrypt_group_key_list:
+    post:
+      consumes:
+      - application/json
+      description: 获取群密钥列表
+      operationId: GetNoEncryptGroupKeyList
+      parameters:
+      - description: GroupID为要获取群成员的群ID
+        in: body
+        name: req
+        required: true
+        schema:
+          $ref: '#/definitions/base_info.GetNoEncryptGroupKeyListReq'
+      produces:
+      - application/json
+      responses:
+        "0":
+          description: ""
+          schema:
+            allOf:
+            - $ref: '#/definitions/base_info.GetGroupKeyListResp'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/server_api_params.GroupKey'
+                  type: array
+              type: object
+        "400":
+          description: errCode为400 一般为参数输入错误, token未带上等
+          schema:
+            $ref: '#/definitions/base_info.Swagger400Resp'
+        "500":
+          description: errCode为500 一般为服务器内部错误
+          schema:
+            $ref: '#/definitions/base_info.Swagger500Resp'
+      summary: 获取最近三天群密钥列表(无加密)
       tags:
       - 群组相关
   /group/get_recv_group_applicationList:
